Updated Character Sheet

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,19 +136,21 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,
 SphereComponent=SphereComponent.Collision.Collision,
-TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
+TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
-K2Node_VariableGet=
+K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,
-FloatProperty=
+FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-StructProperty=TopDownCharacter_C.Collision.Collision,
+StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 ArrayProperty=
 IntProperty=
-K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
+K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+BaseWeapon_C=StructProperty.DefaultValueCategory.None,
+UserDefinedStruct=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -172,20 +174,17 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+ContentBrowserTab1.SelectedPaths=/Game/Chloe
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
-OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Switch.Switch
-OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Door.Door
-OpenAssetsAtExit=/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt
-OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
-OpenAssetsAtExit=/Game/AIAgent/TestPawn2.TestPawn2
+OpenAssetsAtExit=/Game/TopDownBP/Character/Character_sheet.Character_sheet
+OpenAssetsAtExit=/Game/TopDownBP/Character/CharacterStruct.CharacterStruct
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1804,6 +1803,23 @@ K2Node_InputAction.Input=True
 TestPawn2_C.Default=True
 Switch_C.TransformCommon=True
 Door_C.TransformCommon=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Actor=True
+CharacterStruct.None=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1835,9 +1851,13 @@ Door_C.TransformCommon=True
 /Game/AIAgent/AIbot.AIbot=0
 /Game/AIAgent/NewAITree.NewAITree=0
 /Game/GW000979/DataStruct/BaseWeapon.BaseWeapon=1
-/Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable=1
+/Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable=0
 /Game/GW000979/DataStruct/Weapon_Struct.Weapon_Struct=1
 /Game/GW000979/DataStruct/DamageType.DamageType=1
+/Game/TopDownBP/Blueprints/TopDownCharacter2.TopDownCharacter2=1
+/Game/SpawnActor/SpawnPoint.SpawnPoint=0
+/Game/TopDownBP/Character/Character_sheet.Character_sheet=0
+/Game/TopDownBP/Character/CharacterStruct.CharacterStruct=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1845,7 +1865,7 @@ InstalledPlugins=Substance
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SphereComponent=
 ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
@@ -1889,6 +1909,7 @@ REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[14]\" "
+BaseWeapon_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -1917,7 +1938,7 @@ UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
-GenericImport=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
+GenericImport=../../../../../../Users/t019847g/Documents/Character_sheet.csv
 GenericExport=C:/Users/Tony/Desktop/Level 6/Collab/SK_Mannequin_TD.FBX
 GenericOpen=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 GenericSave=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2565,8 +2586,8 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
+RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
