--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1963,6 +1963,42 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+REINST_TopDownCharacter_C_84.TransformCommon=True
+REINST_TopDownCharacter_C_84.Animation=True
+REINST_TopDownCharacter_C_84.Mesh=True
+REINST_TopDownCharacter_C_84.Clothing=True
+REINST_TopDownCharacter_C_84.Physics=True
+REINST_TopDownCharacter_C_84.Collision=True
+REINST_TopDownCharacter_C_84.ClothingSimulation=True
+REINST_TopDownCharacter_C_84.Lighting=True
+REINST_TopDownCharacter_C_84.Rendering=True
+REINST_TopDownCharacter_C_84.Tags=True
+REINST_TopDownCharacter_C_84.Activation=True
+REINST_TopDownCharacter_C_84.Cooking=True
+REINST_TopDownCharacter_C_84.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_84.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_84.Character Movement: Walking=True
+REINST_TopDownCharacter_C_84.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_84.Character Movement: Flying=True
+REINST_TopDownCharacter_C_84.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_84.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_84.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_84.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_84.Character Movement=True
+REINST_TopDownCharacter_C_84.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_84.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_84.RootMotion=True
+REINST_TopDownCharacter_C_84.NavMovement=True
+REINST_TopDownCharacter_C_84.Velocity=True
+REINST_TopDownCharacter_C_84.PlanarMovement=True
+REINST_TopDownCharacter_C_84.MovementComponent=True
+REINST_TopDownCharacter_C_84.Shape=True
+REINST_TopDownCharacter_C_84.Navigation=True
+REINST_TopDownCharacter_C_84.Character=True
+REINST_TopDownCharacter_C_84.Camera=True
+REINST_TopDownCharacter_C_84.Pawn=True
+REINST_TopDownCharacter_C_84.Input=True
+REINST_TopDownCharacter_C_84.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2088,9 +2124,9 @@ Perception_C.Service=True
 FloatProperty.Variable=True
 
 [RootWindow]
-ScreenPosition=X=643.000 Y=-2.000
+ScreenPosition=X=-18.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
