--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,7 +139,7 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,
+K2Node_VariableGet=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=
 FloatProperty=
@@ -147,8 +147,8 @@ Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultV
 StructProperty=TopDownCharacter_C.Collision.Collision,
 BoolProperty=TopDownCharacter_C.Collision.Collision,
 ArrayProperty=
-IntProperty=TopDownCharacter_C.Collision.Collision,
-K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,
+IntProperty=
+K2Node_VariableSet=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -172,12 +172,19 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/c024816h
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/c024816h/TopDownCharacter3.TopDownCharacter3
+OpenAssetsAtExit=/Game/c024816h/BasePickUp.BasePickUp
+OpenAssetsAtExit=/Game/c024816h/PickUpInterface.PickUpInterface
+OpenAssetsAtExit=/Game/c024816h/PickupValues.PickupValues
+OpenAssetsAtExit=/Game/TopDownBP/Hud/damagetest.damagetest
+OpenAssetsAtExit=/Game/c024816h/DamageActor.DamageActor
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -1763,6 +1770,48 @@ REINST_TopDownCharacter_C_112.Camera=True
 REINST_TopDownCharacter_C_112.Pawn=True
 REINST_TopDownCharacter_C_112.Input=True
 REINST_TopDownCharacter_C_112.Actor=True
+BasePickUp_C.Tick=True
+BasePickUp_C.Rendering=True
+BasePickUp_C.Replication=True
+BasePickUp_C.Input=True
+BasePickUp_C.Actor=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+BasePickUp_C.TransformCommon=True
+BasePickUp_C.Default=True
+TopDownCharacter3_C.Default=True
+TopDownCharacter3_C.Tick=True
+TopDownCharacter3_C.Character=True
+TopDownCharacter3_C.Camera=True
+TopDownCharacter3_C.Pawn=True
+TopDownCharacter3_C.Rendering=True
+TopDownCharacter3_C.Replication=True
+TopDownCharacter3_C.Input=True
+TopDownCharacter3_C.Actor=True
+TestPawn2_C.Default=True
+DamageActor_C.Tick=True
+DamageActor_C.Rendering=True
+DamageActor_C.Replication=True
+DamageActor_C.Input=True
+DamageActor_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+DamageActor_C.TransformCommon=True
+DamageActor_C.Default=True
+Switch_C.TransformCommon=True
+Switch_C.Default=True
+Switch_C.Rendering=True
+Switch_C.Input=True
+Switch_C.Actor=True
+damagetest_C.Tick=True
+damagetest_C.Replication=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1793,6 +1842,11 @@ REINST_TopDownCharacter_C_112.Actor=True
 /Game/AIAgent/Proto_controller.Proto_controller=0
 /Game/AIAgent/AIbot.AIbot=0
 /Game/AIAgent/NewAITree.NewAITree=0
+/Game/c024816h/PickupValues.PickupValues=0
+/Game/c024816h/PickUpInterface.PickUpInterface=0
+/Game/c024816h/BasePickUp.BasePickUp=0
+/Game/c024816h/TopDownCharacter3.TopDownCharacter3=0
+/Game/AIAgent/TestPawn2.TestPawn2=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1800,11 +1854,11 @@ InstalledPlugins=Substance
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -1843,6 +1897,8 @@ REINST_TestPawn2_C_280="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -1867,7 +1923,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2517,6 +2573,8 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/c024816h/DamageActor.DamageActor;
+RecentlyPlaced=/Game/c024816h/BasePickUp.BasePickUp;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
