--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,8 +105,8 @@ CurrentPosGridSize=1
 CurrentScalingGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/terrain_test
-MRUItem1=/Game/Levels/BlockOut
+MRUItem0=/Game/Levels/BlockOut
+MRUItem1=/Game/Levels/terrain_test
 MRUItem2=/Game/Levels/assetlayout
 MRUItem3=/Game/Levels/Terrain-Test
 MRUItem4=/Game/Levels/test
@@ -202,10 +202,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Models/Ben
 
 [EditorStartup]
-LastLevel=/Game/Levels/terrain_test
+LastLevel=/Game/Levels/BlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1186,6 +1186,7 @@ LandscapeComponent.Lighting=True
 LandscapeComponent.Tags=True
 LandscapeComponent.Activation=True
 LandscapeComponent.Cooking=True
+AssetViewerSettings.Film=False
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -1231,6 +1232,11 @@ LandscapeComponent.Cooking=True
 /Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_=1
 /Game/Models/David/diffuse.diffuse=1
 /Game/Materials/white.white=1
+/Game/Models/David/Material_002.Material_002=1
+/Game/Models/David/LP_barrel.LP_barrel=1
+/Game/Models/David/crate-david-14-01-19.crate-david-14-01-19=1
+/Game/Models/David/LP_Palm_tree.LP_Palm_tree=1
+/Game/Models/David/02_-_Default.02_-_Default=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1290,7 +1296,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/c018840h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=A:/test/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2018,6 +2024,17 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Ben/medium_cactus.medium_cactus;
+RecentlyPlaced=/Game/Models/Ben/large_cactus.large_cactus;
+RecentlyPlaced=/Game/Models/Ben/small_cactus.small_cactus;
+RecentlyPlaced=/Game/Models/Ben/large_bush.large_bush;
+RecentlyPlaced=/Game/Models/David/LP_foliage.LP_foliage;
+RecentlyPlaced=/Game/Models/David/LP_Palm_tree.LP_Palm_tree;
+RecentlyPlaced=/Game/Models/David/LP_barrel.LP_barrel;
+RecentlyPlaced=/Game/Models/David/Material_005.Material_005;
+RecentlyPlaced=/Game/Models/David/Material_002.Material_002;
+RecentlyPlaced=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat.Palm_tree_UVChannel_1_color_Mat;
+RecentlyPlaced=/Game/Models/David/Palm_tree_UVChannel_1_color.Palm_tree_UVChannel_1_color;
 RecentlyPlaced=/Game/Models/Andrew/scaffold01-andrew-11-01-19.scaffold01-andrew-11-01-19;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -2027,17 +2044,6 @@ RecentlyPlaced=/Game/Models/Jack/01_-_Default7.01_-_Default7;
 RecentlyPlaced=/Game/Models/Jack/Rock_Form_3.Rock_Form_3;
 RecentlyPlaced=/Game/Models/Jack/Rock_Form_2.Rock_Form_2;
 RecentlyPlaced=/Game/Models/Jack/Rock_Form_1.Rock_Form_1;
-RecentlyPlaced=/Game/Models/Jack/Ladder-jack-14-01-19.Ladder-jack-14-01-19;
-RecentlyPlaced=/Game/Models/Jack/Crystal_Tiny_Boi_2.Crystal_Tiny_Boi_2;
-RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_2.Crystal_Smol_2;
-RecentlyPlaced=/Game/Models/Jack/Crystal_Smol_1.Crystal_Smol_1;
-RecentlyPlaced=/Game/Models/Jack/01_-_Default8.01_-_Default8;
-RecentlyPlaced=/Game/Models/Jack/01_-_Default3.01_-_Default3;
-RecentlyPlaced=/Game/Models/Jack/Crystal_Realistic_2.Crystal_Realistic_2;
-RecentlyPlaced=/Game/Models/Jack/Crystal_realistic_1.Crystal_realistic_1;
-RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_4_Dylan_09_01_19.Vase_4_Dylan_09_01_19;
-RecentlyPlaced=/Game/Models/Dylan/Vase_3_Dylan_09_01_19.Vase_3_Dylan_09_01_19;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2189,26 +2195,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/terrain_test
-MRUItem1=/Game/Levels/BlockOut
-MRUItem2=/Game/Levels/assetlayout
-MRUItem3=/Game/Levels/test
-MRUItem4=/Game/Materials/white
-MRUItem5=/Game/Levels/Assetslayout
-MRUItem6=/Game/Models/Jack/Rock_Form_1
-MRUItem7=/Game/Models/Jack/Rock_Form_2
-MRUItem8=/Game/Models/Jack/Rock_Form_3
-MRUItem9=/Game/Models/David/diffuse
-MRUItem10=/Game/Models/David/diffuse_Mat
-MRUItem11=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
-MRUItem12=/Game/Models/Andrew/scaffold02-andrew-11-01-19
-MRUItem13=/Game/Models/David/02_-_Default
-MRUItem14=/Game/Models/Ben/1_handle_vase_Ben_Wilkinson_09-01-19
-MRUItem15=/Game/Materials/SandstoneMat2
-MRUItem16=/Game/Materials/Water
-MRUItem17=/Game/Materials/standstonenormal
-MRUItem18=/Game/Materials/SandstoneMat_Dark
-MRUItem19=/Game/Materials/standstone
+MRUItem0=/Game/Models/David/LP_foliage
+MRUItem1=/Game/Models/David/02_-_Default
+MRUItem2=/Game/Models/David/LP_Palm_tree
+MRUItem3=/Game/Models/David/crate-david-14-01-19
+MRUItem4=/Game/Models/David/LP_barrel
+MRUItem5=/Game/Models/David/Material_005
+MRUItem6=/Game/Models/David/Material_002
+MRUItem7=/Game/Levels/BlockOut
+MRUItem8=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
+MRUItem9=/Game/Levels/terrain_test
+MRUItem10=/Game/Levels/assetlayout
+MRUItem11=/Game/Levels/test
+MRUItem12=/Game/Materials/white
+MRUItem13=/Game/Levels/Assetslayout
+MRUItem14=/Game/Models/Jack/Rock_Form_1
+MRUItem15=/Game/Models/Jack/Rock_Form_2
+MRUItem16=/Game/Models/Jack/Rock_Form_3
+MRUItem17=/Game/Models/David/diffuse
+MRUItem18=/Game/Models/David/diffuse_Mat
+MRUItem19=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
