--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -202,7 +202,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Models/Ben
+ContentBrowserTab1.SelectedPaths=/Game/Mannequin
 
 [EditorStartup]
 LastLevel=/Game/Levels/BlockOut
@@ -1237,6 +1237,8 @@ AssetViewerSettings.Film=False
 /Game/Models/David/crate-david-14-01-19.crate-david-14-01-19=1
 /Game/Models/David/LP_Palm_tree.LP_Palm_tree=1
 /Game/Models/David/02_-_Default.02_-_Default=1
+/Game/Models/Ben/02_-_Default.02_-_Default=1
+/Game/Models/Ben/small_bush.small_bush=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2024,6 +2026,8 @@ LastLogListing=FBXImport
 /Game/Models=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Ben/02_-_Default.02_-_Default;
+RecentlyPlaced=/Game/Models/Ben/small_bush.small_bush;
 RecentlyPlaced=/Game/Models/Ben/medium_cactus.medium_cactus;
 RecentlyPlaced=/Game/Models/Ben/large_cactus.large_cactus;
 RecentlyPlaced=/Game/Models/Ben/small_cactus.small_cactus;
@@ -2042,8 +2046,6 @@ RecentlyPlaced=/Game/Models/Jack/01_-_Default6.01_-_Default6;
 RecentlyPlaced=/Game/Models/Jack/Rock_Rubble_3.Rock_Rubble_3;
 RecentlyPlaced=/Game/Models/Jack/01_-_Default7.01_-_Default7;
 RecentlyPlaced=/Game/Models/Jack/Rock_Form_3.Rock_Form_3;
-RecentlyPlaced=/Game/Models/Jack/Rock_Form_2.Rock_Form_2;
-RecentlyPlaced=/Game/Models/Jack/Rock_Form_1.Rock_Form_1;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2195,26 +2197,26 @@ ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/David/LP_foliage
-MRUItem1=/Game/Models/David/02_-_Default
-MRUItem2=/Game/Models/David/LP_Palm_tree
-MRUItem3=/Game/Models/David/crate-david-14-01-19
-MRUItem4=/Game/Models/David/LP_barrel
-MRUItem5=/Game/Models/David/Material_005
-MRUItem6=/Game/Models/David/Material_002
-MRUItem7=/Game/Levels/BlockOut
-MRUItem8=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
-MRUItem9=/Game/Levels/terrain_test
-MRUItem10=/Game/Levels/assetlayout
-MRUItem11=/Game/Levels/test
-MRUItem12=/Game/Materials/white
-MRUItem13=/Game/Levels/Assetslayout
-MRUItem14=/Game/Models/Jack/Rock_Form_1
-MRUItem15=/Game/Models/Jack/Rock_Form_2
-MRUItem16=/Game/Models/Jack/Rock_Form_3
-MRUItem17=/Game/Models/David/diffuse
-MRUItem18=/Game/Models/David/diffuse_Mat
-MRUItem19=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_
+MRUItem0=/Game/Models/Ben/small_bush
+MRUItem1=/Game/Models/Ben/02_-_Default
+MRUItem2=/Game/Levels/BlockOut
+MRUItem3=/Game/Models/David/LP_foliage
+MRUItem4=/Game/Models/David/02_-_Default
+MRUItem5=/Game/Models/David/LP_Palm_tree
+MRUItem6=/Game/Models/David/crate-david-14-01-19
+MRUItem7=/Game/Models/David/LP_barrel
+MRUItem8=/Game/Models/David/Material_005
+MRUItem9=/Game/Models/David/Material_002
+MRUItem10=/Game/Models/David/Palm_tree_UVChannel_1_color_Mat
+MRUItem11=/Game/Levels/terrain_test
+MRUItem12=/Game/Levels/assetlayout
+MRUItem13=/Game/Levels/test
+MRUItem14=/Game/Materials/white
+MRUItem15=/Game/Levels/Assetslayout
+MRUItem16=/Game/Models/Jack/Rock_Form_1
+MRUItem17=/Game/Models/Jack/Rock_Form_2
+MRUItem18=/Game/Models/Jack/Rock_Form_3
+MRUItem19=/Game/Models/David/diffuse
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
