--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -169,9 +169,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/TopDownBP/TargetDummy/DamageText.DamageText
-OpenAssetsAtExit=/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy
+CleanShutdown=True
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -993,6 +991,7 @@ WidgetInteractionComponent.Events=True
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
 /Game/AIAgent/ProtoTree.ProtoTree=0
 /Game/TopDownBP/TargetDummy/DamageText.DamageText=0
+/Game/TopDownBP/TargetDummy/TargetDummy.TargetDummy=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1043,7 +1042,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -1645,8 +1644,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2018.05.14-10.37.26
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.06.09-14.07.02
+SequencerWidgets.LastCompileMethod=External
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
