potionsUpdateJan17Jan10am

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,13 +178,8 @@ ContentBrowserTab1.SelectedPaths=/Game/c024816h
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/c024816h/TopDownCharacter3.TopDownCharacter3
-OpenAssetsAtExit=/Game/c024816h/BasePickUp.BasePickUp
-OpenAssetsAtExit=/Game/c024816h/PickUpInterface.PickUpInterface
-OpenAssetsAtExit=/Game/c024816h/PickupValues.PickupValues
-OpenAssetsAtExit=/Game/TopDownBP/Hud/damagetest.damagetest
-OpenAssetsAtExit=/Game/c024816h/DamageActor.DamageActor
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
