--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -174,13 +174,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Chloe/UI/Ingame.Ingame
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/AIAgent/TestPawn2.TestPawn2
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2157,6 +2160,44 @@ Button.Events=True
 Ingame_C.Default=True
 Ingame_C.Designer=True
 Ingame_C.Layout=True
+REINST_TopDownCharacter_C_136.TransformCommon=True
+REINST_TopDownCharacter_C_136.Animation=True
+REINST_TopDownCharacter_C_136.Mesh=True
+REINST_TopDownCharacter_C_136.None=True
+REINST_TopDownCharacter_C_136.Physics=True
+REINST_TopDownCharacter_C_136.Clothing=True
+REINST_TopDownCharacter_C_136.Collision=True
+REINST_TopDownCharacter_C_136.Lighting=True
+REINST_TopDownCharacter_C_136.ClothingSimulation=True
+REINST_TopDownCharacter_C_136.Rendering=True
+REINST_TopDownCharacter_C_136.Tags=True
+REINST_TopDownCharacter_C_136.Activation=True
+REINST_TopDownCharacter_C_136.Cooking=True
+REINST_TopDownCharacter_C_136.Character Movement: Jumping / Falling=True
+REINST_TopDownCharacter_C_136.Character Movement (General Settings)=True
+REINST_TopDownCharacter_C_136.Character Movement: Walking=True
+REINST_TopDownCharacter_C_136.Character Movement: Swimming=True
+REINST_TopDownCharacter_C_136.Character Movement: Flying=True
+REINST_TopDownCharacter_C_136.Character Movement: Custom Movement=True
+REINST_TopDownCharacter_C_136.Character Movement (Rotation Settings)=True
+REINST_TopDownCharacter_C_136.Character Movement: Physics Interaction=True
+REINST_TopDownCharacter_C_136.Character Movement (Networking)=True
+REINST_TopDownCharacter_C_136.Character Movement=True
+REINST_TopDownCharacter_C_136.Character Movement: Avoidance=True
+REINST_TopDownCharacter_C_136.Character Movement: NavMesh Movement=True
+REINST_TopDownCharacter_C_136.RootMotion=True
+REINST_TopDownCharacter_C_136.NavMovement=True
+REINST_TopDownCharacter_C_136.Velocity=True
+REINST_TopDownCharacter_C_136.PlanarMovement=True
+REINST_TopDownCharacter_C_136.MovementComponent=True
+REINST_TopDownCharacter_C_136.Shape=True
+REINST_TopDownCharacter_C_136.Navigation=True
+REINST_TopDownCharacter_C_136.Character=True
+REINST_TopDownCharacter_C_136.Camera=True
+REINST_TopDownCharacter_C_136.Pawn=True
+REINST_TopDownCharacter_C_136.Input=True
+REINST_TopDownCharacter_C_136.Actor=True
+TestPawn_C.ComponentTick=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2199,18 +2240,19 @@ Ingame_C.Layout=True
 /Game/TopDownBP/Maps/TopDownExampleMap.TopDownExampleMap:PersistentLevel.TopDownExampleMap=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/Chloe/UI/Ingame.Ingame=0
+/Game/AIAgent/TestPawn.TestPawn=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2218,8 +2260,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2237,7 +2279,7 @@ TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TestPawn2_C=
+TestPawn2_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_91="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BotAwareness="\"Struct.tempEnemies\" "
 FindPlayersInRange="\"Struct.TempEnemyArray\" "
@@ -2306,7 +2348,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2958,6 +3000,8 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
+RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/DemoFolder/DestructableWall.DestructableWall;
 RecentlyPlaced=/Game/DemoFolder/DestructWall.DestructWall;
 RecentlyPlaced=/Game/DemoFolder/DemoWall_DM.DemoWall_DM;
@@ -2967,8 +3011,6 @@ RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryText
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
-RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
-RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
